pythonscript/cffi_bindings/cdef.gen.h

/********************************************************/
/* AUTOGENERATED by tools/generate_gdnative_cffidefs.py */
/********************************************************/
typedef enum godot_error {GODOT_OK, GODOT_FAILED, GODOT_ERR_UNAVAILABLE, GODOT_ERR_UNCONFIGURED, GODOT_ERR_UNAUTHORIZED, GODOT_ERR_PARAMETER_RANGE_ERROR, GODOT_ERR_OUT_OF_MEMORY, GODOT_ERR_FILE_NOT_FOUND, GODOT_ERR_FILE_BAD_DRIVE, GODOT_ERR_FILE_BAD_PATH, GODOT_ERR_FILE_NO_PERMISSION, GODOT_ERR_FILE_ALREADY_IN_USE, GODOT_ERR_FILE_CANT_OPEN, GODOT_ERR_FILE_CANT_WRITE, GODOT_ERR_FILE_CANT_READ, GODOT_ERR_FILE_UNRECOGNIZED, GODOT_ERR_FILE_CORRUPT, GODOT_ERR_FILE_MISSING_DEPENDENCIES, GODOT_ERR_FILE_EOF, GODOT_ERR_CANT_OPEN, GODOT_ERR_CANT_CREATE, GODOT_ERR_QUERY_FAILED, GODOT_ERR_ALREADY_IN_USE, GODOT_ERR_LOCKED, GODOT_ERR_TIMEOUT, GODOT_ERR_CANT_CONNECT, GODOT_ERR_CANT_RESOLVE, GODOT_ERR_CONNECTION_ERROR, GODOT_ERR_CANT_AQUIRE_RESOURCE, GODOT_ERR_CANT_FORK, GODOT_ERR_INVALID_DATA, GODOT_ERR_INVALID_PARAMETER, GODOT_ERR_ALREADY_EXISTS, GODOT_ERR_DOES_NOT_EXIST, GODOT_ERR_DATABASE_CANT_READ, GODOT_ERR_DATABASE_CANT_WRITE, GODOT_ERR_COMPILATION_FAILED, GODOT_ERR_METHOD_NOT_FOUND, GODOT_ERR_LINK_FAILED, GODOT_ERR_SCRIPT_FAILED, GODOT_ERR_CYCLIC_LINK, GODOT_ERR_INVALID_DECLARATION, GODOT_ERR_DUPLICATE_SYMBOL, GODOT_ERR_PARSE_ERROR, GODOT_ERR_BUSY, GODOT_ERR_SKIP, GODOT_ERR_HELP, GODOT_ERR_BUG, GODOT_ERR_PRINTER_ON_FIRE, GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD, GODOT_ERR_WTF = GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD} godot_error;
typedef bool godot_bool;
typedef int godot_int;
typedef float godot_real;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
typedef struct godot_vector3
{
  uint8_t _dont_touch_that[12];
} godot_vector3;
typedef struct godot_basis
{
  uint8_t _dont_touch_that[36];
} godot_basis;
typedef struct godot_quat
{
  uint8_t _dont_touch_that[16];
} godot_quat;
void godot_basis_new(godot_basis *p_v);
void godot_basis_new_with_euler_quat(godot_basis *p_v, const godot_quat *p_euler);
void godot_basis_new_with_euler(godot_basis *p_v, const godot_vector3 p_euler);
void godot_basis_new_with_axis_and_angle(godot_basis *p_v, const godot_vector3 p_axis, const godot_real p_phi);
void godot_basis_get_elements(godot_basis *p_v, godot_vector3 *p_elements);
godot_vector3 godot_basis_get_axis(const godot_basis *p_v, const godot_int p_axis);
void godot_basis_set_axis(godot_basis *p_v, const godot_int p_axis, const godot_vector3 p_value);
godot_vector3 godot_basis_get_row(const godot_basis *p_v, const godot_int p_row);
void godot_basis_set_row(godot_basis *p_v, const godot_int p_row, const godot_vector3 p_value);
godot_real godot_basis_determinant(const godot_basis *p_v);
godot_vector3 godot_basis_get_euler(const godot_basis *p_v);
godot_int godot_basis_get_orthogonal_index(const godot_basis *p_v);
godot_vector3 godot_basis_get_scale(const godot_basis *p_v);
void godot_basis_inverse(godot_basis *p_dest, const godot_basis *p_v);
void godot_basis_orthonormalized(godot_basis *p_dest, const godot_basis *p_v);
void godot_basis_rotated(godot_basis *p_dest, const godot_basis *p_v, const godot_vector3 p_axis, const godot_real p_phi);
void godot_basis_scaled(godot_basis *p_dest, const godot_basis *p_v, const godot_vector3 p_scale);
godot_real godot_basis_tdotx(const godot_basis *p_v, const godot_vector3 p_with);
godot_real godot_basis_tdoty(const godot_basis *p_v, const godot_vector3 p_with);
godot_real godot_basis_tdotz(const godot_basis *p_v, const godot_vector3 p_with);
void godot_basis_transposed(godot_basis *p_dest, const godot_basis *p_v);
godot_vector3 godot_basis_xform(const godot_basis *p_v, const godot_vector3 p_vect);
godot_vector3 godot_basis_xform_inv(const godot_basis *p_v, const godot_vector3 p_vect);
godot_vector3 godot_vector3_new(const godot_real p_x, const godot_real p_y, const godot_real p_z);
void godot_vector3_set_axis(godot_vector3 *p_v, const godot_int p_axis, const godot_real p_val);
godot_real godot_vector3_get_axis(const godot_vector3 *p_v, const godot_int p_axis);
godot_int godot_vector3_min_axis(const godot_vector3 *p_v);
godot_int godot_vector3_max_axis(const godot_vector3 *p_v);
godot_real godot_vector3_length(const godot_vector3 *p_v);
godot_real godot_vector3_length_squared(const godot_vector3 *p_v);
godot_vector3 godot_vector3_normalized(const godot_vector3 *p_v);
godot_vector3 godot_vector3_inverse(const godot_vector3 *p_v);
godot_vector3 godot_vector3_snapped(const godot_vector3 *p_v, const godot_real val);
godot_vector3 godot_vector3_rotated(const godot_vector3 *p_v, const godot_vector3 p_axis, const godot_real phi);
godot_vector3 godot_vector3_linear_interpolate(const godot_vector3 *p_v, const godot_vector3 p_b, const godot_real t);
godot_vector3 godot_vector3_cubic_interpolate(const godot_vector3 *p_v, const godot_vector3 p_b, const godot_vector3 p_pre_a, const godot_vector3 p_post_b, const godot_real t);
godot_vector3 godot_vector3_cross(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_real godot_vector3_dot(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_basis godot_vector3_outer(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_basis godot_vector3_to_diagonal_matrix(const godot_vector3 *p_v);
godot_vector3 godot_vector3_abs(const godot_vector3 *p_v);
godot_vector3 godot_vector3_floor(const godot_vector3 *p_v);
godot_vector3 godot_vector3_ceil(const godot_vector3 *p_v);
godot_real godot_vector3_distance_to(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_real godot_vector3_distance_squared_to(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_real godot_vector3_angle_to(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_vector3 godot_vector3_slide(const godot_vector3 *p_v, const godot_vector3 p_vec);
godot_vector3 godot_vector3_bounce(const godot_vector3 *p_v, const godot_vector3 p_vec);
godot_vector3 godot_vector3_reflect(const godot_vector3 *p_v, const godot_vector3 p_vec);
godot_vector3 godot_vector3_operator_add(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_vector3 godot_vector3_operator_subtract(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_vector3 godot_vector3_operator_multiply_vector(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_vector3 godot_vector3_operator_multiply_scalar(const godot_vector3 *p_v, const godot_real p_b);
godot_vector3 godot_vector3_operator_divide_vector(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_vector3 godot_vector3_operator_divide_scalar(const godot_vector3 *p_v, const godot_real p_b);
godot_bool godot_vector3_operator_equal(const godot_vector3 *p_v, const godot_vector3 p_b);
godot_bool godot_vector3_operator_less(const godot_vector3 *p_v, const godot_vector3 p_b);
typedef struct godot_pool_byte_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_byte_array;
typedef struct godot_pool_int_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_int_array;
typedef struct godot_pool_real_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_real_array;
typedef struct godot_pool_string_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_string_array;
typedef struct godot_pool_vector2_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector2_array;
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;
void godot_pool_byte_array_new(godot_pool_byte_array *p_pba);
void godot_pool_byte_array_new_with_array(godot_pool_byte_array *p_pba, const godot_array *p_a);
void godot_pool_byte_array_append(godot_pool_byte_array *p_pba, const uint8_t p_data);
void godot_pool_byte_array_append_array(godot_pool_byte_array *p_pba, const godot_pool_byte_array *p_array);
int godot_pool_byte_array_insert(godot_pool_byte_array *p_pba, const godot_int p_idx, const uint8_t p_data);
void godot_pool_byte_array_invert(godot_pool_byte_array *p_pba);
void godot_pool_byte_array_push_back(godot_pool_byte_array *p_pba, const uint8_t p_data);
void godot_pool_byte_array_remove(godot_pool_byte_array *p_pba, const godot_int p_idx);
void godot_pool_byte_array_resize(godot_pool_byte_array *p_pba, const godot_int p_size);
void godot_pool_byte_array_set(godot_pool_byte_array *p_pba, const godot_int p_idx, const uint8_t p_data);
uint8_t godot_pool_byte_array_get(godot_pool_byte_array *p_pba, const godot_int p_idx);
godot_int godot_pool_byte_array_size(godot_pool_byte_array *p_pba);
void godot_pool_byte_array_destroy(godot_pool_byte_array *p_pba);
void godot_pool_int_array_new(godot_pool_int_array *p_pia);
void godot_pool_int_array_new_with_array(godot_pool_int_array *p_pia, const godot_array *p_a);
void godot_pool_int_array_append(godot_pool_int_array *p_pia, const godot_int p_data);
void godot_pool_int_array_append_array(godot_pool_int_array *p_pia, const godot_pool_int_array *p_array);
int godot_pool_int_array_insert(godot_pool_int_array *p_pia, const godot_int p_idx, const godot_int p_data);
void godot_pool_int_array_invert(godot_pool_int_array *p_pia);
void godot_pool_int_array_push_back(godot_pool_int_array *p_pia, const godot_int p_data);
void godot_pool_int_array_remove(godot_pool_int_array *p_pia, const godot_int p_idx);
void godot_pool_int_array_resize(godot_pool_int_array *p_pia, const godot_int p_size);
void godot_pool_int_array_set(godot_pool_int_array *p_pia, const godot_int p_idx, const godot_int p_data);
godot_int godot_pool_int_array_get(godot_pool_int_array *p_pia, const godot_int p_idx);
godot_int godot_pool_int_array_size(godot_pool_int_array *p_pia);
void godot_pool_int_array_destroy(godot_pool_int_array *p_pia);
void godot_pool_real_array_new(godot_pool_real_array *p_pra);
void godot_pool_real_array_new_with_array(godot_pool_real_array *p_pra, const godot_array *p_a);
void godot_pool_real_array_append(godot_pool_real_array *p_pra, const godot_real p_data);
void godot_pool_real_array_append_array(godot_pool_real_array *p_pra, const godot_pool_real_array *p_array);
int godot_pool_real_array_insert(godot_pool_real_array *p_pra, const godot_int p_idx, const godot_real p_data);
void godot_pool_real_array_invert(godot_pool_real_array *p_pra);
void godot_pool_real_array_push_back(godot_pool_real_array *p_pra, const godot_real p_data);
void godot_pool_real_array_remove(godot_pool_real_array *p_pra, const godot_int p_idx);
void godot_pool_real_array_resize(godot_pool_real_array *p_pra, const godot_int p_size);
void godot_pool_real_array_set(godot_pool_real_array *p_pra, const godot_int p_idx, const godot_real p_data);
godot_real godot_pool_real_array_get(godot_pool_real_array *p_pra, const godot_int p_idx);
godot_int godot_pool_real_array_size(godot_pool_real_array *p_pra);
void godot_pool_real_array_destroy(godot_pool_real_array *p_pra);
void godot_pool_string_array_new(godot_pool_string_array *p_psa);
void godot_pool_string_array_new_with_array(godot_pool_string_array *p_psa, const godot_array *p_a);
void godot_pool_string_array_append(godot_pool_string_array *p_psa, const godot_string *p_data);
void godot_pool_string_array_append_array(godot_pool_string_array *p_psa, const godot_pool_string_array *p_array);
int godot_pool_string_array_insert(godot_pool_string_array *p_psa, const godot_int p_idx, const godot_string *p_data);
void godot_pool_string_array_invert(godot_pool_string_array *p_psa);
void godot_pool_string_array_push_back(godot_pool_string_array *p_psa, const godot_string *p_data);
void godot_pool_string_array_remove(godot_pool_string_array *p_psa, const godot_int p_idx);
void godot_pool_string_array_resize(godot_pool_string_array *p_psa, const godot_int p_size);
void godot_pool_string_array_set(godot_pool_string_array *p_psa, const godot_int p_idx, const godot_string *p_data);
godot_string godot_pool_string_array_get(godot_pool_string_array *p_psa, const godot_int p_idx);
godot_int godot_pool_string_array_size(godot_pool_string_array *p_psa);
void godot_pool_string_array_destroy(godot_pool_string_array *p_psa);
void godot_pool_vector2_array_new(godot_pool_vector2_array *p_pv2a);