pythonscript/gdnative.pxd


    void godot_basis_new_with_axis_and_angle(godot_basis* r_dest, godot_vector3* p_axis, godot_real p_phi)

    void godot_basis_new_with_euler(godot_basis* r_dest, godot_vector3* p_euler)

    void godot_basis_new_with_euler_quat(godot_basis* r_dest, godot_quat* p_euler)

    godot_string godot_basis_as_string(godot_basis* p_self)

    godot_basis godot_basis_inverse(godot_basis* p_self)

    godot_basis godot_basis_transposed(godot_basis* p_self)

    godot_basis godot_basis_orthonormalized(godot_basis* p_self)

    godot_real godot_basis_determinant(godot_basis* p_self)

    godot_basis godot_basis_rotated(godot_basis* p_self, godot_vector3* p_axis, godot_real p_phi)

    godot_basis godot_basis_scaled(godot_basis* p_self, godot_vector3* p_scale)

    godot_vector3 godot_basis_get_scale(godot_basis* p_self)

    godot_vector3 godot_basis_get_euler(godot_basis* p_self)

    godot_quat godot_basis_get_quat(godot_basis* p_self)

    void godot_basis_set_quat(godot_basis* p_self, godot_quat* p_quat)

    void godot_basis_set_axis_angle_scale(godot_basis* p_self, godot_vector3* p_axis, godot_real p_phi, godot_vector3* p_scale)

    void godot_basis_set_euler_scale(godot_basis* p_self, godot_vector3* p_euler, godot_vector3* p_scale)

    void godot_basis_set_quat_scale(godot_basis* p_self, godot_quat* p_quat, godot_vector3* p_scale)

    godot_real godot_basis_tdotx(godot_basis* p_self, godot_vector3* p_with)

    godot_real godot_basis_tdoty(godot_basis* p_self, godot_vector3* p_with)

    godot_real godot_basis_tdotz(godot_basis* p_self, godot_vector3* p_with)

    godot_vector3 godot_basis_xform(godot_basis* p_self, godot_vector3* p_v)

    godot_vector3 godot_basis_xform_inv(godot_basis* p_self, godot_vector3* p_v)

    godot_int godot_basis_get_orthogonal_index(godot_basis* p_self)

    void godot_basis_new(godot_basis* r_dest)

    void godot_basis_get_elements(godot_basis* p_self, godot_vector3* p_elements)

    godot_vector3 godot_basis_get_axis(godot_basis* p_self, godot_int p_axis)

    void godot_basis_set_axis(godot_basis* p_self, godot_int p_axis, godot_vector3* p_value)

    godot_vector3 godot_basis_get_row(godot_basis* p_self, godot_int p_row)

    void godot_basis_set_row(godot_basis* p_self, godot_int p_row, godot_vector3* p_value)

    godot_bool godot_basis_operator_equal(godot_basis* p_self, godot_basis* p_b)

    godot_basis godot_basis_operator_add(godot_basis* p_self, godot_basis* p_b)

    godot_basis godot_basis_operator_subtract(godot_basis* p_self, godot_basis* p_b)

    godot_basis godot_basis_operator_multiply_vector(godot_basis* p_self, godot_basis* p_b)

    godot_basis godot_basis_operator_multiply_scalar(godot_basis* p_self, godot_real p_b)

    godot_basis godot_basis_slerp(godot_basis* p_self, godot_basis* p_b, godot_real p_t)

    ctypedef enum godot_vector3_axis:
        GODOT_VECTOR3_AXIS_X
        GODOT_VECTOR3_AXIS_Y
        GODOT_VECTOR3_AXIS_Z

    void godot_vector3_new(godot_vector3* r_dest, godot_real p_x, godot_real p_y, godot_real p_z)

    godot_string godot_vector3_as_string(godot_vector3* p_self)

    godot_int godot_vector3_min_axis(godot_vector3* p_self)

    godot_int godot_vector3_max_axis(godot_vector3* p_self)

    godot_real godot_vector3_length(godot_vector3* p_self)

    godot_real godot_vector3_length_squared(godot_vector3* p_self)

    godot_bool godot_vector3_is_normalized(godot_vector3* p_self)

    godot_vector3 godot_vector3_normalized(godot_vector3* p_self)

    godot_vector3 godot_vector3_inverse(godot_vector3* p_self)

    godot_vector3 godot_vector3_snapped(godot_vector3* p_self, godot_vector3* p_by)

    godot_vector3 godot_vector3_rotated(godot_vector3* p_self, godot_vector3* p_axis, godot_real p_phi)

    godot_vector3 godot_vector3_linear_interpolate(godot_vector3* p_self, godot_vector3* p_b, godot_real p_t)

    godot_vector3 godot_vector3_cubic_interpolate(godot_vector3* p_self, godot_vector3* p_b, godot_vector3* p_pre_a, godot_vector3* p_post_b, godot_real p_t)

    godot_real godot_vector3_dot(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_cross(godot_vector3* p_self, godot_vector3* p_b)

    godot_basis godot_vector3_outer(godot_vector3* p_self, godot_vector3* p_b)

    godot_basis godot_vector3_to_diagonal_matrix(godot_vector3* p_self)

    godot_vector3 godot_vector3_abs(godot_vector3* p_self)

    godot_vector3 godot_vector3_floor(godot_vector3* p_self)

    godot_vector3 godot_vector3_ceil(godot_vector3* p_self)

    godot_real godot_vector3_distance_to(godot_vector3* p_self, godot_vector3* p_b)

    godot_real godot_vector3_distance_squared_to(godot_vector3* p_self, godot_vector3* p_b)

    godot_real godot_vector3_angle_to(godot_vector3* p_self, godot_vector3* p_to)

    godot_vector3 godot_vector3_slide(godot_vector3* p_self, godot_vector3* p_n)

    godot_vector3 godot_vector3_bounce(godot_vector3* p_self, godot_vector3* p_n)

    godot_vector3 godot_vector3_reflect(godot_vector3* p_self, godot_vector3* p_n)

    godot_vector3 godot_vector3_operator_add(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_operator_subtract(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_operator_multiply_vector(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_operator_multiply_scalar(godot_vector3* p_self, godot_real p_b)

    godot_vector3 godot_vector3_operator_divide_vector(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_operator_divide_scalar(godot_vector3* p_self, godot_real p_b)

    godot_bool godot_vector3_operator_equal(godot_vector3* p_self, godot_vector3* p_b)

    godot_bool godot_vector3_operator_less(godot_vector3* p_self, godot_vector3* p_b)

    godot_vector3 godot_vector3_operator_neg(godot_vector3* p_self)

    void godot_vector3_set_axis(godot_vector3* p_self, godot_vector3_axis p_axis, godot_real p_val)

    godot_real godot_vector3_get_axis(godot_vector3* p_self, godot_vector3_axis p_axis)

    void godot_pool_byte_array_new(godot_pool_byte_array* r_dest)

    void godot_pool_byte_array_new_copy(godot_pool_byte_array* r_dest, godot_pool_byte_array* p_src)

    void godot_pool_byte_array_new_with_array(godot_pool_byte_array* r_dest, godot_array* p_a)

    void godot_pool_byte_array_append(godot_pool_byte_array* p_self, uint8_t p_data)

    void godot_pool_byte_array_append_array(godot_pool_byte_array* p_self, godot_pool_byte_array* p_array)

    godot_error godot_pool_byte_array_insert(godot_pool_byte_array* p_self, godot_int p_idx, uint8_t p_data)

    void godot_pool_byte_array_invert(godot_pool_byte_array* p_self)

    void godot_pool_byte_array_push_back(godot_pool_byte_array* p_self, uint8_t p_data)

    void godot_pool_byte_array_remove(godot_pool_byte_array* p_self, godot_int p_idx)

    void godot_pool_byte_array_resize(godot_pool_byte_array* p_self, godot_int p_size)

    godot_pool_byte_array_read_access* godot_pool_byte_array_read(godot_pool_byte_array* p_self)

    godot_pool_byte_array_write_access* godot_pool_byte_array_write(godot_pool_byte_array* p_self)

    void godot_pool_byte_array_set(godot_pool_byte_array* p_self, godot_int p_idx, uint8_t p_data)

    uint8_t godot_pool_byte_array_get(godot_pool_byte_array* p_self, godot_int p_idx)

    godot_int godot_pool_byte_array_size(godot_pool_byte_array* p_self)

    void godot_pool_byte_array_destroy(godot_pool_byte_array* p_self)

    void godot_pool_int_array_new(godot_pool_int_array* r_dest)

    void godot_pool_int_array_new_copy(godot_pool_int_array* r_dest, godot_pool_int_array* p_src)

    void godot_pool_int_array_new_with_array(godot_pool_int_array* r_dest, godot_array* p_a)

    void godot_pool_int_array_append(godot_pool_int_array* p_self, godot_int p_data)

    void godot_pool_int_array_append_array(godot_pool_int_array* p_self, godot_pool_int_array* p_array)

    godot_error godot_pool_int_array_insert(godot_pool_int_array* p_self, godot_int p_idx, godot_int p_data)

    void godot_pool_int_array_invert(godot_pool_int_array* p_self)

    void godot_pool_int_array_push_back(godot_pool_int_array* p_self, godot_int p_data)

    void godot_pool_int_array_remove(godot_pool_int_array* p_self, godot_int p_idx)

    void godot_pool_int_array_resize(godot_pool_int_array* p_self, godot_int p_size)

    godot_pool_int_array_read_access* godot_pool_int_array_read(godot_pool_int_array* p_self)

    godot_pool_int_array_write_access* godot_pool_int_array_write(godot_pool_int_array* p_self)

    void godot_pool_int_array_set(godot_pool_int_array* p_self, godot_int p_idx, godot_int p_data)

    godot_int godot_pool_int_array_get(godot_pool_int_array* p_self, godot_int p_idx)

    godot_int godot_pool_int_array_size(godot_pool_int_array* p_self)

    void godot_pool_int_array_destroy(godot_pool_int_array* p_self)

    void godot_pool_real_array_new(godot_pool_real_array* r_dest)

    void godot_pool_real_array_new_copy(godot_pool_real_array* r_dest, godot_pool_real_array* p_src)

    void godot_pool_real_array_new_with_array(godot_pool_real_array* r_dest, godot_array* p_a)

    void godot_pool_real_array_append(godot_pool_real_array* p_self, godot_real p_data)

    void godot_pool_real_array_append_array(godot_pool_real_array* p_self, godot_pool_real_array* p_array)

    godot_error godot_pool_real_array_insert(godot_pool_real_array* p_self, godot_int p_idx, godot_real p_data)

    void godot_pool_real_array_invert(godot_pool_real_array* p_self)

    void godot_pool_real_array_push_back(godot_pool_real_array* p_self, godot_real p_data)

    void godot_pool_real_array_remove(godot_pool_real_array* p_self, godot_int p_idx)

    void godot_pool_real_array_resize(godot_pool_real_array* p_self, godot_int p_size)

    godot_pool_real_array_read_access* godot_pool_real_array_read(godot_pool_real_array* p_self)

    godot_pool_real_array_write_access* godot_pool_real_array_write(godot_pool_real_array* p_self)

    void godot_pool_real_array_set(godot_pool_real_array* p_self, godot_int p_idx, godot_real p_data)

    godot_real godot_pool_real_array_get(godot_pool_real_array* p_self, godot_int p_idx)

    godot_int godot_pool_real_array_size(godot_pool_real_array* p_self)

    void godot_pool_real_array_destroy(godot_pool_real_array* p_self)

    void godot_pool_string_array_new(godot_pool_string_array* r_dest)

    void godot_pool_string_array_new_copy(godot_pool_string_array* r_dest, godot_pool_string_array* p_src)

    void godot_pool_string_array_new_with_array(godot_pool_string_array* r_dest, godot_array* p_a)

    void godot_pool_string_array_append(godot_pool_string_array* p_self, godot_string* p_data)

    void godot_pool_string_array_append_array(godot_pool_string_array* p_self, godot_pool_string_array* p_array)

    godot_error godot_pool_string_array_insert(godot_pool_string_array* p_self, godot_int p_idx, godot_string* p_data)

    void godot_pool_string_array_invert(godot_pool_string_array* p_self)

    void godot_pool_string_array_push_back(godot_pool_string_array* p_self, godot_string* p_data)

    void godot_pool_string_array_remove(godot_pool_string_array* p_self, godot_int p_idx)

    void godot_pool_string_array_resize(godot_pool_string_array* p_self, godot_int p_size)

    godot_pool_string_array_read_access* godot_pool_string_array_read(godot_pool_string_array* p_self)

    godot_pool_string_array_write_access* godot_pool_string_array_write(godot_pool_string_array* p_self)

    void godot_pool_string_array_set(godot_pool_string_array* p_self, godot_int p_idx, godot_string* p_data)

    godot_string godot_pool_string_array_get(godot_pool_string_array* p_self, godot_int p_idx)

    godot_int godot_pool_string_array_size(godot_pool_string_array* p_self)

    void godot_pool_string_array_destroy(godot_pool_string_array* p_self)

    void godot_pool_vector2_array_new(godot_pool_vector2_array* r_dest)
